# gl

./: .#CMakeLists.txt  .clang-tidy  .clangd  .dir-locals.el  .gitignore  .gitmodules  Batch.cpp  Batch.hpp  Batch2.hpp  CMakeLists.txt  GameLoop.cpp  GameLoop.hpp  GameWindow.cpp  GameWindow.hpp  GenBatch.cpp  GenBatch.hpp  Makefile  Math.hpp  Matrix.hpp  README.org  ShaderProgram.cpp  ShaderProgram.hpp  Uniforms.cpp  Uniforms.hpp  Vec.hpp  Vec3.hpp  VertexBuffer.cpp  VertexBuffer.h  VertexBuffer.hpp  brick.frag  brick.vert  color.hpp  config.h  cube.cpp  cube.frag  cube.vert  defs.h  ecm.yaml  engine-test.cpp  gltools.cpp  (+21 more)
cmake/: config.cmake  detect_env.cmake  macros.cmake
data/: Array.hpp  BitSet.hpp  Ref.hpp
error/: error.cpp  error.hpp
fs/: fs.hpp  fs_unix.cpp  fs_unix.hpp
ge/: Camera.cpp  Camera.hpp  Command.cpp  Command.hpp  CommandArgs.cpp  CommandArgs.hpp  CommandParams.cpp  CommandParams.hpp  CommandProcessor.cpp  CommandProcessor.hpp  CommandRegistry.cpp  CommandRegistry.hpp  Commands.cpp  Commands.hpp  Engine.cpp  Engine.hpp  EngineEvents.hpp  EngineOptions.cpp  EngineOptions.hpp  Event.hpp  GameLoop.cpp  GameLoop.hpp  GameWindow.cpp  GameWindow.diag  GameWindow.hpp  Init.cpp  Init.hpp  KeyBinding.cpp  KeyBinding.hpp  KeyHandler.cpp  KeyHandler.hpp  Timer.hpp  Tokenizer.cpp  Tokenizer.hpp  Var.cpp  Var.hpp  WindowRenderTarget.cpp  WindowRenderTarget.hpp
glt/: AABB.hpp  CubeMesh.hpp  Frame.cpp  Frame.hpp  GLSLPreprocessor.cpp  GLSLPreprocessor.hpp  GenBatch.cpp  GenBatch.hpp  GeometryTransform.cpp  GeometryTransform.hpp  Mesh.cpp  Mesh.hpp  Preprocessor.cpp  Preprocessor.hpp  Ref.hpp  RenderManager.cpp  RenderManager.hpp  RenderTarget.cpp  RenderTarget.hpp  ShaderCompiler.cpp  ShaderCompiler.hpp  ShaderManager.cpp  ShaderManager.hpp  ShaderObject.cpp  ShaderObject.hpp  ShaderProgram.cpp  ShaderProgram.hpp  TextureHandle.cpp  TextureHandle.hpp  TextureRenderTarget.cpp  TextureRenderTarget.hpp  TextureRenderTarget3D.cpp  TextureRenderTarget3D.hpp  Transformations.cpp  Uniforms.cpp  Uniforms.hpp  VertexDescription.hpp  ViewFrustum.cpp  ViewFrustum.hpp  ViewingFrustum.hpp  (+12 more)
log/: Log.cpp  Log.hpp
marching-cubes/: marching-cubes.cpp  tables.hpp  tables2.hpp
math/: EulerAngles.hpp  Math.hpp  bench.cpp  defs.hpp  io.hpp  ivec3.hpp  mat3.hpp  mat4.hpp  math.hpp  plane.cpp  plane.hpp  real.hpp  test.cpp  transform.hpp  v4.hpp  v4_test.cpp  vec2.hpp  vec3.hpp  vec4.hpp
ph/: RigidBody.hpp
programs/: CMakeLists.txt  glfw-test.cpp  hello-gl.cpp
programs/bump/: CMakeLists.txt  bump.cpp
programs/bump/shaders/: sphere.frag  sphere.vert
programs/feedback/: #feedback.cpp#  .#feedback.cpp  CMakeLists.txt  feedback.cpp
programs/glfw-test/: #glfw-test.cpp#  CMakeLists.txt  glfw-test.cpp
programs/hello-gl/: CMakeLists.txt  cutil.c  cutil.h  hello-gl.cpp  hello-gl.f.glsl
programs/hello-gl/shaders/: hello-gl.frag  hello-gl.vert
programs/julia-fractal/: CMakeLists.txt  fractal.cpp
programs/julia-fractal/shaders/: postproc.frag  postproc.vert  render.frag  render.vert
programs/marching-cubes/: CMakeLists.txt  marching-cubes.cpp  tables.hpp  tables2.hpp
programs/marching-cubes.old/: CMakeLists.txt  marching-cubes.cpp  tables.hpp  tables2.hpp
programs/marching-cubes.old/shaders/: feedback.frag  feedback.vert  julia.frag  marching-cubes.geom  perlin-noise.frag
programs/marching-cubes/shaders/: julia.frag  marching-cubes.frag  marching-cubes.geom  marching-cubes.vert  perlin-noise.frag  perlin-noise.geom  perlin-noise.vert  render-noise.frag  render-noise.vert  render-polygon.frag  render-polygon.vert
programs/mc/: CMakeLists.txt  mc.cpp
programs/mc/cl/: program.cl  program_old.cl  triangle_count_table.h  triangle_edge_table.h
programs/mc/shaders/: render.frag  render.vert  shader_constants.h
programs/nbody/: CMakeLists.txt  nbody.cpp  nbody_phys.cpp  nbody_phys.hpp
programs/nbody/shaders/: ground.frag  particle.frag  particle.vert
programs/opengl-raw/: CMakeLists.txt  opengl-raw.cpp
programs/phys/: CMakeLists.txt  masspendulum.cpp  utils.hpp
programs/quasi/: CMakeLists.txt  quasi.cpp
programs/quasi/shaders/: #render.frag#  postproc.frag  postproc.vert  quasi_constants.h  render.frag  render.vert
programs/query-extension/: CMakeLists.txt  query-extension.cpp
programs/shadow-maps/: CMakeLists.txt  shadow-maps.cpp
programs/sim/: CMakeLists.txt  sim-main.cpp  sim.cpp  sim.hpp
programs/sim-sfml/: sim-sfml.cpp
programs/sim/shaders/: brick.frag  brick.vert  postproc.frag  postproc.vert  sim_shading.frag  sim_shading.h  sphere.frag  sphere.vert  sphere_instanced.frag  sphere_instanced.vert  sphere_instanced2.vert
programs/simple/: CMakeLists.txt  simple.cpp
programs/smistad-mc/: CMakeLists.txt  gpu-mc.cl  gpu-mc.cpp  openCLGLUtilities.cpp  openCLUtilities.hpp
programs/springs/: CMakeLists.txt  springs.cpp
programs/springs/shaders/: physics.vert  sphere.frag  sphere.vert
programs/stereoproj/: CMakeLists.txt  stereoproj.cpp
programs/stereoproj/shaders/: plane.frag  plane.vert
programs/teapot/: CMakeLists.txt  dump_bmp.c  dump_bmp.cpp  dump_bmp.h  dump_bmp.hpp  mesh.h  parse_sply.cpp  parse_sply.hpp  teapot.cpp
programs/teapot/shaders/: color.h  glow_pass0.frag  glow_pass1.frag  glow_pass1.vert  glow_pass1a.frag  glow_pass1b.frag  glow_pass_constants.h  postproc.frag  postproc.vert  teapot.frag  teapot.vert  teapot_lighting.frag  teapot_lighting.h  teapot_textured.frag  teapot_textured.vert
programs/voxel-world/: CMakeLists.txt  voxel-world.cpp
programs/voxel-world/shaders/: directional-light.frag  directional-light.h  voxel.frag  voxel.vert
scripts/: bump.script  camera.script  default.script  fractal.script  hello-gl.script  marching-cubes-old.script  marching-cubes.script  mc.script  nbody.script  quasi.script  shadowmaps.script  sim-sfml.script  sim.script  simple.script  smistad-mc.script  (+4 more)
teapot/: .gitignore  CMakeLists.txt  mesh.h  parse_sply.cpp  parse_sply.hpp  teapot.cpp
teapot/data/: teapot.sply
teapot/shaders/: gamma.frag  gamma.h  teapot.frag  teapot.vert  teapot_textured.frag  teapot_textured.vert
(+375 files in other folders)
