add_subdirectory(bump)
#add_subdirectory(glfw-test)
#add_subdirectory(hello-gl)
add_subdirectory(julia-fractal)
#add_subdirectory(marching-cubes.old)
#add_subdirectory(mc)
add_subdirectory(nbody)
#add_subdirectory(opengl-raw)
add_subdirectory(quasi)
#add_subdirectory(query-extension)
#add_subdirectory(sim)
#add_subdirectory(simple)
#add_subdirectory(springs)
add_subdirectory(teapot)
add_subdirectory(voxel-world)
